--- a/Db/src/main/webapp/Child/Teacher/2.html
+++ b/Db/src/main/webapp/Child/Teacher/2.html
@@ -68,12 +68,6 @@
         .left{
             width: 20%;
         }
-        .in{
-            width: 80%;
-             font-size: 20px;
-             text-indent: 2em;
-             padding-top: 20px;
-         }
         .im{
             width: 100%;
         }
@@ -81,7 +75,22 @@
             font-size: 20px;
             text-align: center;
         }
-
+        .in{
+            width: 80%;
+            font-size: 20px;
+            text-indent: 2em;
+            padding-top: 20px;
+        }
+        .right{
+            margin-left: auto;
+        }
+        p{
+            font-size: 20px;
+            text-indent: 2em;
+        }
+        h2{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -98,14 +107,21 @@
             <!--                <li><a href="">学校概况</a></li>-->
             <!--            </ul>-->
         </div>
-
+        <div class="item fontsize">
+            <div><a href="">专业相关</a></div>
+            <!--二级导航-->
+            <ul class="fontsize">
+                <li><a href="../introdu/1.html">专业介绍</a></li>
+                <li><a href="../introdu/2.html">专业方向</a></li>
+            </ul>
+        </div>
         <div class="item fontsize">
             <div><a href="">师资团队</a></div>
             <!--二级导航-->
             <ul class="fontsize">
-                <li><a href="1.html">教授</a></li>
-                <li><a href="2.html">副教授</a></li>
-                <li><a href="3.html">讲师</a></li>
+                <li><a href="../Teacher/1.html">教授</a></li>
+                <li><a href="../Teacher/2.html">副教授</a></li>
+                <li><a href="../Teacher/3.html">讲师</a></li>
             </ul>
         </div>
         <div class="item fontsize">
@@ -116,7 +132,14 @@
                 <li><a href="../experiment/2.html">925移动开发实验室</a></li>
             </ul>
         </div>
+        <div class="item fontsize">
+            <div><a href="../introdu/3.html">就业指导</a></div>
+        </div>
+        <div class="item fontsize right">
+            <div><a href="../../login">后台管理</a></div>
+        </div>
     </div>
+
 </div>
 
 <div class="content">
