--- a/Db/src/main/webapp/Child/experiment/2.html
+++ b/Db/src/main/webapp/Child/experiment/2.html
@@ -68,7 +68,9 @@
             background-color: darkcyan;
             color: white;
         }
-
+        .right{
+            margin-left: auto;
+        }
     </style>
 </head>
 <body>
@@ -85,7 +87,14 @@
             <!--                <li><a href="">学校概况</a></li>-->
             <!--            </ul>-->
         </div>
-
+        <div class="item fontsize">
+            <div><a href="">专业相关</a></div>
+            <!--二级导航-->
+            <ul class="fontsize">
+                <li><a href="../introdu/1.html">专业介绍</a></li>
+                <li><a href="../introdu/2.html">专业方向</a></li>
+            </ul>
+        </div>
         <div class="item fontsize">
             <div><a href="">师资团队</a></div>
             <!--二级导航-->
@@ -103,7 +112,14 @@
                 <li><a href="2.html">925移动开发实验室</a></li>
             </ul>
         </div>
+        <div class="item fontsize">
+            <div><a href="../introdu/3.html">就业指导</a></div>
+        </div>
+        <div class="item fontsize right">
+            <div><a href="../../login">后台管理</a></div>
+        </div>
     </div>
+
 </div>
 
 <div class="content">
