final1/6 no photo

--- a/Db/src/main/webapp/Child/Teacher/2.html
+++ b/Db/src/main/webapp/Child/Teacher/2.html
@@ -60,10 +60,15 @@
             background-color: darkcyan;
             color: white;
         }
-        .team{
-            padding: 50px;
+        .content{
             display: flex;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+        }
+        .team{
+            margin: 10px;
+            padding: 50px;
+            /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+            /*background-color: red;*/
         }
         .left{
             width: 20%;
@@ -90,6 +95,14 @@
         }
         h2{
             text-align: center;
+        }
+        .team a{
+            display: block;
+            color: black;
+        }
+        .team img{
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
@@ -141,47 +154,41 @@
     </div>
 
 </div>
-
+<h1 style="color: darkcyan">
+    教授
+</h1>
 <div class="content">
     <div class="team">
-        <div class="left">
+        <a href="11.html">
             <img src="../../asserts/Teacher/img_1.png" alt="李莉" class="im">
             <div class="name">李莉</div>
-        </div>
+        </a>
 
-        <div class="in">
-            李莉，博士，副教授，软件工程专业主任，专业教工党支部书记，硕士生导师。主要研究方向：先进软件工程技术、群智能优化、大型分布式计算。主持和参加国家级、省部级各类科学研究项目、教学研究项目10余项，各级各类科研及教学获奖5项，多次获得东北林业大学教学质量优秀奖、教书育人先进个人，获得东北林业大学青年教师授课大赛二等奖，信息与计算机工程学院教师授课精英赛第一名。获得2016年东北林业大学“我最喜爱的十佳教师”称号。主持重点课程、精品在线课程、线上线下建设课程各1门。拥有专利权3项。在国内外核心期刊及国际学术会议上发表学术论文 10余篇，编写教材3部。美国University of California Riverside访问学者。
-        </div>
+
     </div>
     <div class="team">
-        <div class="left">
+        <a href="22.html">
             <img src="../../asserts/Teacher/img_2.png" alt="罗嗣卿" class="im">
             <div class="name">罗嗣卿</div>
-        </div>
+        </a>
 
-        <div class="in">
-            罗嗣卿，硕士，副教授，硕士生导师。主要研究方向：信息系统析与设计、图像处理、软件服务与应用。主持和参加省攻关重点、省自然基金、国家林业公益性行业专项、省教改项目15项，发表论文20余篇，教材3部。
 
-        </div>
+
     </div>
     <div class="team">
-        <div class="left">
+        <a href="33.html">
             <img src="../../asserts/Teacher/img_3.png" alt="刘丹" class="im">
             <div class="name">刘丹</div>
-        </div>
+        </a>
 
-        <div class="in">
-            刘丹，副教授，工学博士，硕士生导师，软件工程专业副主任。主要研究方向：无线传感器网络相关技术、数据仓库，数据挖掘。主持或参与科技部支撑计划项目、省自然科学基金项目、省科技攻关项目、哈尔滨科技局项目、中央高校基本可言业务C类项目等科研、教学项目20余项，出版教材7部，发表论文10余篇，其中EI收录论文7篇。获黑龙江省科技进步三等奖1项，省级奖励2项。授权发明专利、实用新型专利、软件著作权10余项。</div>
     </div>
     <div class="team">
-        <div class="left">
+        <a href="44.html">
             <img src="../../asserts/Teacher/img_4.png" alt="赵玉茗" class="im">
             <div class="name">赵玉茗</div>
-        </div>
+        </a>
 
-        <div class="in">
-            赵玉茗，博士，副教授，硕士生导师，专业副主任。主要研究方向：人工智能、数据挖掘、生物信息学。主持国家自然科学基金、黑龙江省自然科学基金、林木遗传育种国家重点实验室开放基金、中央高校基本科研业务费专项基金项目5项；获得东北林业大学青年教师授课大赛二等奖；主持精品在线课程建设1门。获得专利3项。发表学术论文20余篇，其中EI、SCI收录10余篇，参与编写教材1部。美国Indiana University-Purdue University Indianapolis访问学者，美国The Johns Hopkins University博士后访问学者。
-        </div>
+
     </div>
 
 </div>
