--- a/Db/src/main/webapp/Child/Teacher/3.html
+++ b/Db/src/main/webapp/Child/Teacher/3.html
@@ -60,10 +60,15 @@
             background-color: darkcyan;
             color: white;
         }
-        .team{
-            padding: 50px;
+        .content{
             display: flex;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            text-align: center;
+        }
+        .team{
+            margin: 10px;
+            padding: 50px;
+            /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);*/
+            /*background-color: red;*/
         }
         .left{
             width: 20%;
@@ -90,6 +95,14 @@
         }
         h2{
             text-align: center;
+        }
+        .team a{
+            display: block;
+            color: black;
+        }
+        .team img{
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
@@ -141,35 +154,23 @@
     </div>
 
 </div>
+<h1 style="color: darkcyan">讲师</h1>
 <div class="content">
     <div class="team">
-        <div class="left">
-            <img src="../../asserts/Teacher/img_5.png" alt="边继龙" class="im">
-            <div class="name">边继龙</div>
-        </div>
+        <a href="111.html"><img src="../../asserts/Teacher/img_5.png" alt="边继龙" class="im">
+            <div class="name">边继龙</div></a>
 
-        <div class="in">
-            边继龙，博士，讲师。主要研究方向：立体匹配、矢量地图压缩。曾参与或负责的科研项目包括：矢量地图版权保护技术研究、小基高比立体测绘图像匹配处理方法研究及十二五科研项目等。在国内外期刊上发表学术论文7篇，其中被EI收录5篇；申请发明专利3项。</div>
     </div>
     <div class="team">
-        <div class="left">
-            <img src="../../asserts/Teacher/img_6.png" alt="王波" class="im">
-            <div class="name">王波</div>
-        </div>
+        <a href="222.html"><img src="../../asserts/Teacher/img_6.png" alt="王波" class="im">
+            <div class="name">王波</div></a>
 
-        <div class="in">
-            王波，讲师，硕士。主要研究方向：计算数学，软件开发。发表学术论文3篇。
-        </div>
+
     </div>
     <div class="team">
-        <div class="left">
-            <img src="../../asserts/Teacher/img_7.png" alt="李琰" class="im">
-            <div class="name">李琰</div>
-        </div>
+        <a href="333.html"><img src="../../asserts/Teacher/img_7.png" alt="李琰" class="im">
+            <div class="name">李琰</div></a>
 
-        <div class="in">
-            李琰，讲师，主要研究方向：软件工程，遥感和林业信息。参与科研项目多项，参编教材1部，并发表部分相关论文。
-        </div>
     </div>
 
 </div>
