--- a/Db/src/main/webapp/Child/experiment/2.html
+++ b/Db/src/main/webapp/Child/experiment/2.html
@@ -60,7 +60,6 @@
             text-indent: 2em;
         }
         .footer{
-            position: fixed;
             bottom: 0;
             width: 100%;
             margin: auto;
@@ -123,7 +122,8 @@
 </div>
 
 <div class="content">
-    <h1>925实验室</h1>
+    <h1>925移动开发实验室</h1>
+    <img src="sources/img.png" alt="" style="margin: 0 25%">
     <h2>来由</h2>
     <p>
         培根曾经说过，阅读使人充实，会谈使人敏捷，写作使人精确。带着这句话，我们还要更加慎重的审视这个问题： 要想清楚，925实验室，到底是一种怎么样的存在。 就我个人来说，925实验室对我的意义，不能不说非常重大。 康德曾经说过，既然我已经踏上这条道路，那么，任何东西都不应妨碍我沿着这条路走下去。我希望诸位也能好好地体会这句话。 既然如此， 在这种困难的抉择下，本人思来想去，寝食难安。 每个人都不得不面对这些问题。 在面对这种问题时， 本人也是经过了深思熟虑，在每个日日夜夜思考这个问题。 我们一般认为，抓住了问题的关键，其他一切则会迎刃而解。 925实验室的发生，到底需要如何做到，不925实验室的发生，又会如何产生。</p>
