--- a/Db/src/main/webapp/Child/Teacher/1.html
+++ b/Db/src/main/webapp/Child/Teacher/1.html
@@ -62,8 +62,6 @@
         }
         .team{
             padding: 50px;
-            display: flex;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         }
         .left{
             width: 20%;
@@ -90,6 +88,10 @@
         }
         h2{
             text-align: center;
+        }
+        .team a{
+            /*display: block;*/
+            color: black;
         }
     </style>
 </head>
@@ -142,13 +144,14 @@
 
 </div>
 
+<h1 style="color: darkcyan">教授</h1>
 <div class="content">
     <div class="team">
-        <div class="left">
+        <a href="0.html"><div class="left">
             <img src="../../asserts/Teacher/img.png" alt="苏健民" class="im">
             <div class="name">苏健民</div>
-        </div>
-        <div class="in">苏健民，教授，硕士，硕士生导师，软件工程一级学科带头人，省计算机学会嵌入式专委会委员。主要研究方向：自动控制、信号与信息处理。主持或参加科研、教学项目11项，科研与教学获奖11项，出版教材2部，发表论文32篇。<br><br>Email：1216649568@qq.com</div>
+        </div></a>
+
     </div>
 
 </div>
