--- a/Db/src/main/webapp/Child/introdu/2.html
+++ b/Db/src/main/webapp/Child/introdu/2.html
@@ -60,7 +60,6 @@
             text-indent: 2em;
         }
         .footer{
-            position: fixed;
             bottom: 0;
             width: 100%;
             margin: auto;
@@ -129,6 +128,7 @@
 
 </div>
 <h2>软件工程专业方向</h2>
+<img src="sources/img_1.png" alt="" style="margin: 0 30%">
 <p>
     软件工程专业以IT业需求为导向，培养具有良好综合素质和职业道德，掌握扎实的基础理论和专业知识，具有软件分析、设计、开发、测试与管理能力，具备较强工程实践能力、技术创新能力和团队精神，能快速适应软件工程新技术发展并具有国际视野和国际竞争力的高级软件工程师。 专业实施灵活的“211”人才培养模式（其中,2年基础教育,1年面向企业的专业教育,1年企业顶岗实习），在教学上着力推动基于问题、基于项目和基于案例的学习，对于实践性强的课程，采取校企联合“双师制”培养，同时以大学生创新实践活动、科技大赛为补充，突出工程化培养。
 
