--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="text/javascript" src="A.js"></script>
+    <style>
+        body {
+            background:white;
+        }
+    </style>
 </head>
 <body>
-<h1>hello</h1>
+<div align="center" id="container">
+    <canvas width="800" height="500" id="canvas">
+        Oops, your browser doesn't support this application.
+    </canvas>
+</div>
+
 </body>
 </html>
